--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "angular-editor-fabric-js",
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "Drag and drop editor based on Fabricjs (Angular Cli)",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -10,7 +11,12 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
-  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kevoj/angular-editor-fabric-js"
+  },
+  "author": "Leonardo Rico Guevara (https://github.com/kevoj)",
+  "license": "MIT",
   "dependencies": {
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
