--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,18 @@
     "typeRoots": [
       "node_modules/@types"
     ],
+    "paths": {
+      "@angular/common": ["../node_modules/@angular/common"],
+      "@angular/compiler": ["../node_modules/@angular/compiler"],
+      "@angular/core": ["../node_modules/@angular/core"],
+      "@angular/forms": ["../node_modules/@angular/forms"],
+      "@angular/platform-browser": ["../node_modules/@angular/platform-browser"],
+      "@angular/platform-browser-dynamic": [
+        "../node_modules/@angular/platform-browser-dynamic"
+      ],
+      "@angular/router": ["../node_modules/@angular/router"],
+      "@angular/http": ["../node_modules/@angular/http"]
+    },
     "lib": [
       "es2016",
       "dom"
