--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "angular-editor-fabric-js",
-  "version": "1.0.5",
+  "version": "2.0.0",
   "description": "Drag and drop editor based on Fabricjs (Angular Cli)",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --o",
-    "build": "ng build",
+    "start": "ng serve",
+    "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -18,51 +18,54 @@
   "author": "Leonardo Rico Guevara (https://github.com/kevoj)",
   "keywords": [
     "kitchensink",
+    "kitchensink-angular",
     "canvas",
     "angular",
     "fabricjs",
     "editor",
     "images",
-    "fabric"
+    "fabric",
+    "fabricjs-angular",
+    "angular-fabric"
   ],
   "dependencies": {
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
-    "angular2-color-picker": "^1.3.1",
-    "bootstrap": "^3.3.7",
+    "@angular/animations": "^5.2.0",
+    "@angular/common": "^5.2.0",
+    "@angular/compiler": "^5.2.0",
+    "@angular/core": "^5.2.0",
+    "@angular/forms": "^5.2.0",
+    "@angular/http": "^5.2.0",
+    "@angular/platform-browser": "^5.2.0",
+    "@angular/platform-browser-dynamic": "^5.2.0",
+    "@angular/router": "^5.2.0",
+    "bootstrap": "^4.0.0-beta.3",
     "core-js": "^2.4.1",
-    "fabric": "^1.7.16",
+    "fabric": "^1.7.22",
     "font-awesome": "^4.7.0",
-    "ng2-bootstrap": "^1.6.3",
-    "ng2-file-upload": "^1.2.1",
-    "ng2-pagination": "^2.0.1",
-    "ng2-toastr": "^4.0.1",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
+    "ng2-file-upload": "^1.3.0",
+    "ngx-color-picker": "^5.3.0",
+    "rxjs": "^5.5.6",
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0",
-    "@angular/compiler-cli": "^4.0.0",
-    "@types/jasmine": "2.5.38",
+    "@angular/cli": "1.6.5",
+    "@angular/compiler-cli": "^5.2.0",
+    "@angular/language-service": "^5.2.0",
+    "@types/jasmine": "~2.8.3",
+    "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
-    "codelyzer": "~2.0.0",
-    "jasmine-core": "~2.5.2",
-    "jasmine-spec-reporter": "~3.2.0",
-    "karma": "~1.4.1",
-    "karma-chrome-launcher": "~2.0.0",
+    "codelyzer": "^4.0.1",
+    "jasmine-core": "~2.8.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~2.0.0",
+    "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
-    "protractor": "~5.1.0",
-    "ts-node": "~2.0.0",
-    "tslint": "~4.5.0",
-    "typescript": "~2.2.0"
+    "protractor": "~5.1.2",
+    "ts-node": "~4.1.0",
+    "tslint": "~5.9.1",
+    "typescript": "~2.5.3"
   }
 }
